force-app/main/default/objects/custom_create302__c/custom_create302__c.object-meta.xml
<CustomObject>
    <label>Custom created object302</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects302</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>