force-app/main/default/objects/custom_create302__c/fields/custom_create_302field506__c.field-meta.xml
<CustomField>
    <fullName>custom_create_302field506__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 302field506</label>
    <type>Checkbox</type>
</CustomField>